fix up some spacing

--- a/css/recovery.css
+++ b/css/recovery.css
@@ -61,7 +61,7 @@
     color: #262F3B;
     line-height: 30px;
     -webkit-margin-before: 12px;
-    -webkit-margin-after: 16px;
+    -webkit-margin-after: 24px;
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
     text-align: center;
